[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flingoos-shared-models"
version = "2.0.0"
description = "Generated Pydantic models from @flingoos/shared JSON schemas"
authors = [{name = "Flingoos", email = "dev@flingoos.com"}]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10.0,<3.0.0",
]
keywords = ["pydantic", "models", "schemas", "flingoos", "validation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.optional-dependencies]
storage = [
    "google-cloud-storage>=3.0.0",
    "google-auth>=2.35.0",
]

[project.urls]
Repository = "https://github.com/Diligent4/flingoos-shared"

[tool.setuptools]
packages = ["flingoos_shared_models"]

[tool.setuptools.package-dir]
flingoos_shared_models = "."

[project.readme]
file = "README.md"
content-type = "text/markdown"
